# AoC-2024-Haskell

./: aoc24.cabal
app/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Main.hs
