cabal-version:      3.0

name:               aoc24

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

author:             Guillaume M.

maintainer:         58004135+GuillaumeMZ@users.noreply.github.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable aoc24
    import:           warnings

    main-is:          Main.hs
    other-modules:    Day01 Day02 Day03 Day04 Day05 Day06 Day07

    build-depends:
        base >=4.18.0.0,
        megaparsec ^>=9.7.0

    hs-source-dirs:   app

    default-language: GHC2021
